fixed caption centering and image spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,15 +30,17 @@
     padding-top: 1em;
     padding-bottom: 1em;
     max-height: 350px;
-    border: 3px solid red;
 }
   
   .textBox {
     text-align: center;
     margin-right: auto;
     margin-left: auto;
-    width: 600px;
     padding-bottom: 1em;
+  }
+
+  .textBox-w {
+      width: 600px;
   }
 
   .container {
@@ -46,9 +48,8 @@
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1170px;
+    max-width: 800px;
     margin-top: 4px;
-    border: 3px solid blue;
 }
 
 .innerTextBox{
@@ -62,8 +63,6 @@
     margin-right: auto;
     margin-left: auto;
     max-width: 370px;
-    border: 3px solid green;
-}
 
 @media screen and (min-width: 1000px) {
     .column {
